turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:9: error: not found: value quartdecercle
quartdecercle()		
^